--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -18,6 +18,7 @@
   "showMore": "Show more",
   "home": "Home",
   "profile": "Profile",
+  "addPhoto": "Add Photo",
   "errors": {
     "unknown": "Unknown error",
     "invalidCredentials": "Invalid credentials",
