--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -22,7 +22,16 @@
   "favoriteMovies": "Favorite Movies",
   "loadPhotos": "Load photos",
   "loadPhotosDescription": "Resources out incentivize relaxation floor loss cc.",
+  "limitedOffer": "Limited Offer",
+  "limitedOfferDescription": "Jeton paketin’ni seçerek bonus kazanın ve yeni bölümlerin kilidini açın!",
+  "limitedOfferBonus": "Bonuses you will get",
   "continue": "Continue",
+  "premiumAccount": "Premium Account",
+  "moreMatch": "More Match",
+  "morePromotions": "More Promotions",
+  "moreLikes": "More Likes",
+  "pickPackageToUnlock": "Pick a package to unlock",
+  "seeAllTokens": "See all tokens",
   "errors": {
     "unknown": "Unknown error",
     "invalidCredentials": "Invalid credentials",
